fixed faking scrollbars

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,10 @@
 }
 
 ::-webkit-scrollbar {
-  width: 9px;
+  width: 0px;
+}
+::-webkit-scrollbar:horizontal {
+  height: 0px;
 }
 ::-webkit-scrollbar-track {
   background: transparent;
@@ -34,6 +37,7 @@ div.credits {
 
 div.credits .window-body {
   height: 6vh;
+  overflow: hidden;
 }
 
 body {
@@ -436,6 +440,7 @@ iframe#youtube {
   div.video-buttons button,
   div.lyrics-buttons button {
     font-size: 10px !important;
+    padding: 5px!important;
   }
 
   h2 {
@@ -466,13 +471,13 @@ iframe#youtube {
 
   .tab {
     width: auto;
-    font-size: 12px;
+    font-size: 10px;
   }
 
   menu.tablist {
     display: grid !important;
     grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
-    height: 5.5rem;
+    height: 6.5rem;
     margin: 0 1px -2px;
   }
 
